 * Passive tree updated to 3.6
 * Added the following 3.6 uniques: (thanks PJacek)
    * Bottled Faith
    * Circle of Nostalgia
    * Hyrri's Truth (except the Precision skill)
    * March of the Legion (except the Blessing support)
	* Mask of the Tribunal
	* Nebulis
    * Perepiteia (except the Lightning Aegis skill)
	* Storm's Gift
 * Added most 3.5 uniques (thanks Patchumz and PJacek)
 * Added base radius values for Dark Pact (24), Vaal Blight (20), and Wither (18)
 * Fixed issue preventing local life on hit modifiers from working correctly
 * The stat comparisons in tooltips for non-equipped two handed weapons now show the changes from replacing both
   weapons if you are dual wielding, rather than your main hand weapon only
 * Storm Call now shows DPS as well as average damage
 * Decay DPS is now only shown if the skill can deal Chaos Damage
VERSION[1.4.129][2019/01/13]
 * "while Focussed" modifiers are now correctly recognised
 * "+X to minimum Endurance Charges" now works correctly
VERSION[1.4.128][2019/01/11]
 * Fixed issue preventing Empower and Enhance supports from working
VERSION[1.4.127][2019/01/06]
 * Fixed error when showing tooltip for Abyssal Cry
 * Fixed error when Gruthkul's Pelt is used in builds that contain spells
 * Fixed error when opening builds containing certain Spectres
VERSION[1.4.126][2019/01/04]
 * Fixed mana cost multipliers on support gems not applying
VERSION[1.4.125][2019/01/04]
 * Fixed Blasphemy mana reservation
 * Fixed error that sometimes occurred when adding gems
VERSION[1.4.124][2019/01/03]
 * Hovering over a gem in the Skills tab will now show the gem's full tooltip, including stats
 * Fixed new issue causing Configuration tab options to not appear
VERSION[1.4.123][2019/01/02]
 * Fixed issue causing Configuration tab options to sometimes fail to appear when appropriate
 * Fixed error when adding crafted modifiers to items
VERSION[1.4.122][2019/01/01]
 * Updated the crafting bench options for 3.5