@@ -7,7 +7,7 @@
 	<File sha1="74cd89091c4db01f0673217a5bd0927f232391e2" name="Launch.lua" part="program"/>
 	<File sha1="72b9bea1871e94a643e4471fd84bbedbc7810336" name="UpdateCheck.lua" part="program"/>
 	<File sha1="4f17937f2b37784e169a3792b235f2a0a3961e61" name="UpdateApply.lua" part="program"/>
-	<File sha1="de7485d4dbc4eaaa57a817a2a409056cf37efdd9" name="changelog.txt" part="program"/>
+	<File sha1="9e79b228cbb2ccb751aeaafb566070337a8a41b7" name="changelog.txt" part="program"/>
 	<File sha1="b093a2709f30c1f83ce5ba9df88c80f22c1beb4a" name="Classes/BuildListControl.lua" part="program"/>
 	<File sha1="16fc5eaa04cc14b2022f6705a12717935454dab0" name="Classes/ButtonControl.lua" part="program"/>
 	<File sha1="a1c463f3329010e551700693296e998c8c2acd59" name="Classes/CalcBreakdownControl.lua" part="program"/>
@@ -27,7 +27,7 @@
 	<File sha1="8298506b88cea37e78c1c5faebc05335b3ace240" name="Classes/ItemListControl.lua" part="program"/>
 	<File sha1="7ecee459d3c477b46c6b6115bfeb2480995e17ed" name="Classes/ItemSetListControl.lua" part="program"/>
 	<File sha1="531cbee8beb690fa9909affc9e5af0d697170c4e" name="Classes/ItemSlotControl.lua" part="program"/>
-	<File sha1="dfe261f4697bfe1d90abfaadaff4e5c71313d4a6" name="Classes/ItemsTab.lua" part="program"/>
+	<File sha1="a83f21746dd0197701f680c1d7f3239629893615" name="Classes/ItemsTab.lua" part="program"/>
 	<File sha1="d2ffe0071641c07b63d152c0f48b691eba0cffb0" name="Classes/LabelControl.lua" part="program"/>
 	<File sha1="075b986fe07f2c5d33eea4c1b6984198adf62fa4" name="Classes/ListControl.lua" part="program"/>
 	<File sha1="f7281f889c87c8de45d5af4243c49d9998d4a272" name="Classes/MinionListControl.lua" part="program"/>
@@ -58,22 +58,22 @@
 	<File sha1="08a0c33737f19f37eb44faf101016fc0c573966c" name="Modules/CalcActiveSkill.lua" part="program"/>
 	<File sha1="48f73482c0b79c6ccfb4c053b03181da047da362" name="Modules/CalcBreakdown.lua" part="program"/>
 	<File sha1="f08ee16af3c136348fe98bc97b5b7f2d2c1f79e4" name="Modules/CalcDefence-2_6.lua" part="program"/>
-	<File sha1="191c20041ff86076825c8c475d39c106e98b5e81" name="Modules/CalcDefence-3_0.lua" part="program"/>
+	<File sha1="6e9e8e34f0cbe3bdeaa73f8bd309d9409b2441b6" name="Modules/CalcDefence-3_0.lua" part="program"/>
 	<File sha1="5094a7c53f3991dbc33cea86e1e5fc0658e7a08d" name="Modules/CalcOffence-2_6.lua" part="program"/>
-	<File sha1="8cf8cf9bcf5b2cda875f59b3d026a7b45f9de40f" name="Modules/CalcOffence-3_0.lua" part="program"/>
+	<File sha1="1b33fbd771623644ffe3542940b1866266dd035a" name="Modules/CalcOffence-3_0.lua" part="program"/>
 	<File sha1="674ac1b18ad72adac959ee831a9fd17d4d26c0b7" name="Modules/CalcPerform.lua" part="program"/>
 	<File sha1="602057f90cbc7152a65472a2293c7bc2cad15fb2" name="Modules/Calcs.lua" part="program"/>
 	<File sha1="32da2a949a5fe0ab10d54078a96caff0dccb5f3f" name="Modules/CalcSections-2_6.lua" part="program"/>
-	<File sha1="1d0416f7c12f773031a97009d73867a3cfdeaaef" name="Modules/CalcSections-3_0.lua" part="program"/>
-	<File sha1="55ee497b7854c63dea0b227a9da4738b57831dd9" name="Modules/CalcSetup.lua" part="program"/>
+	<File sha1="4aa75958a0ebb4c688782420af96a911ec072d0b" name="Modules/CalcSections-3_0.lua" part="program"/>
+	<File sha1="30ff22f3bcca21a1703edfe8c4fe0c7fbe83d9a8" name="Modules/CalcSetup.lua" part="program"/>
 	<File sha1="d63cf884b273fbbee81a6274581011519f73c529" name="Modules/CalcTools.lua" part="program"/>
 	<File sha1="3fd4ec579d4b6cb23a5a18aaffbf713712fb05a9" name="Modules/Common.lua" part="program"/>
-	<File sha1="e4275ac721de27a7da2fb8c73c92d4cea07bf6fd" name="Modules/ConfigOptions.lua" part="program"/>
+	<File sha1="60bd733f9a00dcc0d6dd67fcf75d248d2957e976" name="Modules/ConfigOptions.lua" part="program"/>
 	<File sha1="45959b8e64bd8b75c2b4019555589b745d0ac68a" name="Modules/Data.lua" part="program"/>
 	<File sha1="ee6926d9acb29152f44f223dd117c0b72f1e73af" name="Modules/ItemTools.lua" part="program"/>
 	<File sha1="8ec34cb6ab6e8d08ddc06c524179be1e656c3a8d" name="Modules/Main.lua" part="program"/>
 	<File sha1="6149cc2d0ce734f519e677097e628402ff25f652" name="Modules/ModParser-2_6.lua" part="program"/>
-	<File sha1="ff1797967e135b709d84ca006a282b414400f8b2" name="Modules/ModParser-3_0.lua" part="program"/>
+	<File sha1="f7b484895f7e4072bfc9a9b8046a38f0f70dd922" name="Modules/ModParser-3_0.lua" part="program"/>
 	<File sha1="2ce4f3b83db992a286bd92f3849d037d6dcc8db2" name="Modules/ModTools.lua" part="program"/>
 	<File sha1="6b0b5ac8fdb764b47fd7a1657bd470bd275f9069" name="Modules/StatDescriber.lua" part="program"/>
 	<File sha1="c345cdcf374d271411aa424ab150c0edbb5a362d" name="Assets/game_ui_small.png" part="program"/>
@@ -153,7 +153,7 @@
 	<File sha1="601710e659e078be6aef6b0fedd1c984498aa6a5" name="Data/3_0/Gems.lua" part="program"/>
 	<File sha1="2a7ab8265167c3bd8f3614704242393c85aa2afd" name="Data/3_0/Minions.lua" part="program"/>
 	<File sha1="2c1456797cd1defb47df9158ef048e2a81e14f0a" name="Data/3_0/Misc.lua" part="program"/>
-	<File sha1="0af410ee4ebe86fc4b37dfe57b6f00109f731db8" name="Data/3_0/ModCache.lua" part="program"/>
+	<File sha1="94d05a15bb3b7779043a406c47036ef0c09d6f0b" name="Data/3_0/ModCache.lua" part="program"/>
 	<File sha1="c7de4bc42ef02fcd8979a5362339d625f2b8c4a3" name="Data/3_0/ModFlask.lua" part="program"/>
 	<File sha1="56d2d437d5b83e4ea5d422c2e09b4365d39db52c" name="Data/3_0/ModItem.lua" part="program"/>
 	<File sha1="5729c201cc5be380557e576d35eded455ad7b1a0" name="Data/3_0/ModJewel.lua" part="program"/>
